idiazst published a site update

--- a/index.html
+++ b/index.html
@@ -1057,10 +1057,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="5.1" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#from-causal-to-statistical-quantities"><i class="fa fa-check"></i><b>5.1</b> From causal to statistical quantities</a><ul>
 <li class="chapter" data-level="5.1.1" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#computing-identification-formulas-if-you-know-the-true-distribution"><i class="fa fa-check"></i><b>5.1.1</b> Computing identification formulas if you know the true distribution</a></li>
 <li class="chapter" data-level="5.1.2" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#estimating-identification-formulas"><i class="fa fa-check"></i><b>5.1.2</b> Estimating identification formulas</a></li>
-<li class="chapter" data-level="5.1.3" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#how-can-g-estimation-be-implemented-in-practice"><i class="fa fa-check"></i><b>5.1.3</b> How can g-estimation be implemented in practice?</a></li>
-<li class="chapter" data-level="5.1.4" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#pros-and-cons-of-parametric-models"><i class="fa fa-check"></i><b>5.1.4</b> Pros and cons of parametric models</a></li>
-<li class="chapter" data-level="5.1.5" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#an-example-of-the-bias-of-a-g-computation-estimator-of-the-natural-direct-effect"><i class="fa fa-check"></i><b>5.1.5</b> An example of the bias of a g-computation estimator of the natural direct effect</a></li>
-<li class="chapter" data-level="5.1.6" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#pros-and-cons-of-g-computation-with-data-adaptive-regression"><i class="fa fa-check"></i><b>5.1.6</b> Pros and cons of g-computation with data-adaptive regression</a></li>
+<li class="chapter" data-level="5.1.3" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#weighted-estimator-akin-to-ipw"><i class="fa fa-check"></i><b>5.1.3</b> Weighted estimator (akin to IPW)</a></li>
+<li class="chapter" data-level="5.1.4" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#how-can-g-estimation-and-weighted-estimation-be-implemented-in-practice"><i class="fa fa-check"></i><b>5.1.4</b> How can g-estimation and weighted estimation be implemented in practice?</a></li>
+<li class="chapter" data-level="5.1.5" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#pros-and-cons-of-g-computation-and-weighting-parametric-models"><i class="fa fa-check"></i><b>5.1.5</b> Pros and cons of g-computation and weighting parametric models</a></li>
+<li class="chapter" data-level="5.1.6" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#an-example-of-the-bias-of-a-g-computation-estimator-of-the-natural-direct-effect"><i class="fa fa-check"></i><b>5.1.6</b> An example of the bias of a g-computation estimator of the natural direct effect</a></li>
+<li class="chapter" data-level="5.1.7" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#pros-and-cons-of-g-computation-or-weighting-with-data-adaptive-regression"><i class="fa fa-check"></i><b>5.1.7</b> Pros and cons of g-computation or weighting with data-adaptive regression</a></li>
 </ul></li>
 <li class="chapter" data-level="5.2" data-path="preliminaries-on-semiparametric-estimation.html"><a href="preliminaries-on-semiparametric-estimation.html#semiparametric-estimation"><i class="fa fa-check"></i><b>5.2</b> Semiparametric estimation</a></li>
 </ul></li>
@@ -1108,7 +1109,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h1 class="title">Causal Mediation: Modern Methods for Path Analysis</h1>
 <h2 class="subtitle"><em>A Workshop at SER 2021</em></h2>
 <p class="author"><em>Iván Díaz, Nima Hejazi, Kara Rudolph</em></p>
-<p class="date" style="margin-top: 1.5em;"><em>updated: May 20, 2021</em></p>
+<p class="date" style="margin-top: 1.5em;"><em>updated: May 23, 2021</em></p>
 </div>
 <div id="welcome-to-ser" class="section level1 unnumbered">
 <h1>Welcome to SER!</h1>
